--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">Equipes</a></li>
             <li><a href="#">Réservez</a></li>
+            <li><a href="#">Réservez</a></li>
         </ul>
     </nav>
 </body>
