--- a/justforyou/index.html
+++ b/justforyou/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Salons</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Equipes</a></li>
-            <li><a href="#">Réservez</a></li>
+            <li><a href="#">Réservvez</a></li>
         </ul>
     </nav>
 </body>
