--- a/justforyousimple/index.html
+++ b/justforyousimple/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../justforyousimple/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Just for you - Homepage</title>
 </head>
 
@@ -13,14 +14,20 @@
         <div class="logo">
             <h4>Just For You</h4>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li><a href="#">Services</a></li>
             <li><a href="#">Salons</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Equipes</a></li>
-            <li><a href="#">Réservez</a></li>
+            <li class="reservez"><a href="#">Réservez</a></li>
         </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
+    <script src="../justforyousimple/navbar.js"></script>
 </body>
 
 </html>
