finished home and added services starting page
did this did that

--- a/justforyousimple/services.html
+++ b/justforyousimple/services.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
 
-    <title>Just for you - Homepage</title>
+    <title>Just for you - Services</title>
 </head>
 
 <body>
@@ -30,14 +30,8 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main class="container">
-        <div class="wrapper">
-            <div data-text></div>
-            <span class="item">Votre beauté est notre priorité</span>
-            <span class="item">Sắc đẹp của bạn là ưu tiên hàng đầu của chúng tôi</span>
-            <span class="item">Your beauty is our priority</span>
-            <h2>Just For You</h2>
-        </div>
+    <main class="container-services">
+
     </main>
     <footer>
         <div class="btn-group">
