--- a/justforyousimple/services.html
+++ b/justforyousimple/services.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../justforyousimple/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
@@ -15,7 +16,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>Just For You</h4>
+            <h4>Just <span> For</span> You</h4>
         </div>
         <ul class="nav-links">
             <li><a href="../justforyousimple/services.html">Services</a></li>
@@ -31,7 +32,35 @@
         </div>
     </nav>
     <main class="container-services">
+        <section class="presentation">
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>Onglerie</h1>
+                    <p>
+                        <span> "Nails</span> take any <span> old outfit</span> and make it look <span> new."</span>
+                    </p>
+                </div>
+                <div class="cta">
+                    <button class="cta-select">Voir nos salons</button>
+                    <button class="cta-add">Réservez</button>
+                </div>
+            </div>
+            <div class="cover">
+                <img src="./img/matebook.png" alt="matebook" />
+            </div>
+        </section>
 
+        <div class="laptop-select">
+            <img src="./img/arrow-left.svg" alt="" />
+            <img src="./img/dot.svg" alt="" />
+            <img src="./img/dot-full.svg" alt="" />
+            <img src="./img/dot-full.svg" alt="" />
+            <img src="./img/arrow-right.svg" alt="" />
+        </div>
+
+        <img class="big-circle" src="./img/big-eclipse.svg" alt="" />
+        <img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
+        <img class="small-circle" src="./img/small-eclipse.svg" alt="" />
     </main>
     <footer>
         <div class="btn-group">
