--- a/justforyousimple/services.html
+++ b/justforyousimple/services.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../justforyousimple/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
 
@@ -46,7 +47,7 @@
                 </div>
             </div>
             <div class="cover">
-                <img src="./img/matebook.png" alt="matebook" />
+                <img src="../justforyousimple/img/realrednails.jpg" alt="matebook" />
             </div>
         </section>
 
