added reservation page

--- a/justforyousimple/contact.html
+++ b/justforyousimple/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
 
-    <title>Just for you - Homepage</title>
+    <title>Just for you - Contact</title>
 </head>
 
 <body>
@@ -31,13 +31,7 @@
         </div>
     </nav>
     <main class="container">
-        <div class="wrapper">
-            <div data-text></div>
-            <span class="item">Votre beauté est notre priorité</span>
-            <span class="item">Sắc đẹp của bạn là ưu tiên hàng đầu của chúng tôi</span>
-            <span class="item">Your beauty is our priority</span>
-            <h2>Just For You</h2>
-        </div>
+        <h1>COMING SOON</h1>
     </main>
     <footer>
         <div class="btn-group">
