--- a/justforyousimple/services.html
+++ b/justforyousimple/services.html
@@ -21,10 +21,10 @@
         </div>
         <ul class="nav-links">
             <li><a href="../justforyousimple/services.html">Services</a></li>
-            <li><a href="#">Salons</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Equipes</a></li>
-            <li class="reservez"><a href="#">Réservez</a></li>
+            <li><a href="../justforyousimple/salons.html">Salons</a></li>
+            <li><a href="../justforyousimple/contact.html">Contact</a></li>
+            <li><a href="../justforyousimple/equipes.html">Equipes</a></li>
+            <li class="reservez"><a href="../justforyousimple/reservez.html">Réservez</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
