--- a/justforyousimple/reservez.html
+++ b/justforyousimple/reservez.html
@@ -16,7 +16,9 @@
 <body class="body-reservez">
     <nav>
         <div class="logo">
-            <h4>Just <span> For</span> You</h4>
+            <a href="../justforyousimple/index.html">
+                <h4>Just <span> For</span> You</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li><a href="../justforyousimple/services.html">Services</a></li>
