--- a/justforyousimple/salons.html
+++ b/justforyousimple/salons.html
@@ -15,7 +15,9 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>Just <span> For</span> You</h4>
+            <a href="../justforyousimple/index.html">
+                <h4>Just <span> For</span> You</h4>
+            </a>
         </div>
         <ul class="nav-links">
             <li><a href="../justforyousimple/services.html">Services</a></li>
