--- a/insightsolutionsbarexample/index.html
+++ b/insightsolutionsbarexample/index.html
@@ -13,22 +13,22 @@
         <ul class="lines">
             <li class="line l--0">
                 <span class="line__label title">
-                    Skill level:
+                    PROG
                 </span>
             </li>
             <li class="line l--25">
                 <span class="line__label">
-                    The basics
+                    Les bases
                 </span>
             </li>
             <li class="line l--50">
                 <span class="line__label">
-                    Advanced
+                    Avancés
                 </span>
             </li>
             <li class="line l--75">
                 <span class="line__label">
-                    Seasoned
+                    3 mois
                 </span>
             </li>
             <li class="line l--100">
@@ -44,99 +44,99 @@
                 <ul class="chart--horiz">
                     <li class="chart__bar" style="width: 98%;">
                         <span class="chart__label">
-                            HTML5
+                            Travail d'équipe
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 98%;">
                         <span class="chart__label">
-                            CSS3 & SCSS & CSS in JS
+                            Humeur
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 70%;">
                         <span class="chart__label">
-                            JavaScript
+                            Fatigue
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 60%;">
                         <span class="chart__label">
-                            ReactJS
+                            Repos
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 25%;">
                         <span class="chart__label">
-                            AngularJS
+                            Alimentation
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 60%;">
                         <span class="chart__label">
-                            jQuery
+                            Communication
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 55%;">
                         <span class="chart__label">
-                            NodeJS
+                            Etat d'esprit
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 50%;">
                         <span class="chart__label">
-                            Grunt / Gulp / Webpack
+                            Concentration
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 40%;">
                         <span class="chart__label">
-                            .NET
+                            Reactivité
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 60%;">
                         <span class="chart__label">
-                            Umbraco
+                            Investissement
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 60%;">
                         <span class="chart__label">
-                            Sitecore
+                            Exemple
                         </span>
                     </li>
                 </ul>
             </div>
 
             <div class="chart chart--prod">
-                <span class="chart__title">Productivity</span>
+                <span class="chart__title">Productivité</span>
                 <ul class="chart--horiz">
                     <li class="chart__bar" style="width: 75%;">
                         <span class="chart__label">
-                            Git + Github, Bitbucket & Sourcetree
+                            2018-2019
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 80%;">
                         <span class="chart__label">
-                            Microsoft Office
+                            2019-2020
                         </span>
                     </li>
                 </ul>
             </div>
 
             <div class="chart chart--design">
-                <span class="chart__title">Design</span>
+                <span class="chart__title">Impact</span>
                 <ul class="chart--horiz">
                     <li class="chart__bar" style="width: 40%;">
                         <span class="chart__label">
-                            Sketch
+                            Personnel
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 40%;">
                         <span class="chart__label">
-                            Photoshop
+                            Externe
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 35%;">
                         <span class="chart__label">
-                            Illustrator
+                            Emotionnel
                         </span>
                     </li>
                     <li class="chart__bar" style="width: 80%;">
                         <span class="chart__label">
-                            User Experience
+                            Productivité
                         </span>
                     </li>
                 </ul>
