--- a/dashboardcool/index.html
+++ b/dashboardcool/index.html
@@ -209,7 +209,7 @@
                 <div class="container-fluid">
                     <header class="rad-page-title">
                         <span>Dashboard</span>
-                        <small class="md-txt">Bienvenue Jeremy, <a
+                        <small class="md-txt">Bienvenue Eric, <a
                                 href="https://www.google.com/maps/place/Route+de+Thonon+150,+1222+Vésenaz/@46.2470941,6.2132173,17z/data=!4m13!1m7!3m6!1s0x478c6f6b7aeacf55:0x1e5013c7f1268dcb!2sRoute+de+Thonon+150,+1222+Vésenaz!3b1!8m2!3d46.2470941!4d6.2154113!3m4!1s0x478c6f6b7aeacf55:0x1e5013c7f1268dcb!8m2!3d46.2470941!4d6.2154113"
                                 target="_blank"><i class="fa fa-map-marker rad-txt-danger"></i> Genève</a></small>
                     </header>
@@ -217,28 +217,28 @@
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-success">
                                 <img src="./assets/mind.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">B.E.D.</span>
+                                <span class="heading">DÉTECTION PRÉCOCE DU BURN-OUT</span>
                                 <span class="value"><span>949</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-primary">
                                 <img src="./assets/fist.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">M.S.L.</span>
+                                <span class="heading">HARCÈLEMENT ET MOBBING</span>
                                 <span class="value"><span>678</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-danger">
                                 <img src="./assets/nature.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">I.S.B.</span>
+                                <span class="heading">NIVEAU DE STRESS</span>
                                 <span class="value"><span>755</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box">
                                 <img src="./assets/business-copie.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">I.D.P.</span>
+                                <span class="heading">INDICE DE PERFORMANCE</span>
                                 <span class="value"><span>514</span></span>
                             </div>
                         </div>
