--- a/classicproinsight/index.html
+++ b/classicproinsight/index.html
@@ -35,7 +35,7 @@
                         <li><a href="#projects" data-after="Projects">Objectifs</a></li>
                         <li><a href="#faq" data-after="FAQ">FAQ</a></li>
                         <li><a href="#about" data-after="About">Qui sommes-nous?</a></li>
-                        <li><a href="#contact" data-after="Contact">Contact</a></li>
+                        <!--<li><a href="#contact" data-after="Contact">Contact</a></li>-->
                     </ul>
                 </div>
             </div>
@@ -61,7 +61,7 @@
     <section id="services">
         <div class="services containers">
             <div class="service-top">
-                <h1 class="section-title">N<span>o</span>tre M<span>i</span>ssion</h1>
+                <h1 class="section-title">N<span>o</span>s S<span>o</span>luti<span>o</span>ns</h1>
                 <p>Nous aidons les entreprises à quantifier, optimiser et maîtriser leurs organisations, tout en respectant leur capital humain à travers nos outils digitaux.</p>
             </div>
             <div class="service-bottom">
@@ -423,7 +423,7 @@
     </section>
     <!-- End About Section -->
 
-    <!-- Contact Section -->
+    <!-- Contact Section 
     <section id="contact">
         <div class="contact containers">
             <div>
@@ -456,6 +456,7 @@
             </div>
         </div>
     </section>
+    -->
     <!-- End Contact Section -->
     <footer class="footer-section">
         <div class="container">
