modif dash + classicpro

--- a/classicproinsight/index.html
+++ b/classicproinsight/index.html
@@ -51,7 +51,7 @@
                 <h1>Bonjour, <span></span></h1>
                 <h1>Bienvenue chez <span></span></h1>
                 <h1>Insight Solutions <span></span></h1>
-                <a href="#services" type="button" class="cta">Notre Mission</a>
+                <a href="#services" type="button" class="cta">Nos Solutions</a>
             </div>
         </div>
     </section>
@@ -69,11 +69,13 @@
                     <div class="icon"><img src="./img/hands.png" /></div>
                     <h2>Indice d’engagement des collaborateurs</h2>
                     <p>Comment rendre son organisation plus agile et plus réactive ?</p>
+                    <span>Performance</span>
                 </div>
                 <div class="service-item two">
                     <div class="icon"><img src="./img/meca.png" /></div>
                     <h2>Indice d’agilité organisationnelle</h2>
                     <p>Comment former un manager au management 4.0 ?</p>
+                    <span>Performance</span>
                 </div>
                 <div class="service-item three">
                     <div class="icon"><img src="./img/people.png" /></div>
@@ -81,26 +83,33 @@
                     <p>Comment rendre ces collaborateurs plus engagés et plus productifs au sein de son entreprise ?
 
                     </p>
+                    <span>Performance</span>
                 </div>
                 <div class="service-item four">
                     <div class="icon"><img src="./img/graphs.png" /></div>
                     <h2>Indice de performance</h2>
                     <p>Comment quantifier la productivité humaine et combien vaut-elle ?</p>
+                    <span>Performance</span>
                 </div>
                 <div class="service-item five">
                     <div class="icon"><img src="./img/sadman.png" /></div>
                     <h2>Détection précoce du Burn-out</h2>
                     <p>Eviter ou prévenir les situations de burn out dans son entreprise.</p>
+                    <i>Santé</i>
                 </div>
                 <div class="service-item six">
                     <div class="icon"><img src="./img/fistbump.png" /></div>
                     <h2>Harcèlement et mobbing</h2>
                     <p>Eviter les situations tendues au sein des équipes et maintenir un engagement élevé des collaborateurs.</p>
+                
+                    <i>Santé</i>
                 </div>
                 <div class="service-item seven">
                     <div class="icon"><img src="./img/lvlstress.png" /></div>
                     <h2>Niveau de stress</h2>
+                
                     <p>Comprendre et repérer les comportements de stress pathologique pour les éviter.</p>
+                    <i>Santé</i>
                 </div>
             </div>
         </div>
