--- a/dashboardcool/index.html
+++ b/dashboardcool/index.html
@@ -95,7 +95,7 @@
                                         <div class="pull-left"><i class="fa fa-html5 fa-2x"></i>
                                         </div>
                                         <div class="rad-notification-body">
-                                            <div class="lg-text">Questionnaires terminés(456/512)</div>
+                                            <div class="lg-text">Questionnaires terminés(356/400)</div>
                                             <div class="sm-text">Compteur</div>
                                         </div>
                                     </a>
@@ -209,36 +209,36 @@
                 <div class="container-fluid">
                     <header class="rad-page-title">
                         <span>Dashboard</span>
-                        <small class="md-txt">Bienvenue Eric, <a
+                        <small class="md-txt">Welcome Eric, <a
                                 href="https://www.google.com/maps/place/Route+de+Thonon+150,+1222+Vésenaz/@46.2470941,6.2132173,17z/data=!4m13!1m7!3m6!1s0x478c6f6b7aeacf55:0x1e5013c7f1268dcb!2sRoute+de+Thonon+150,+1222+Vésenaz!3b1!8m2!3d46.2470941!4d6.2154113!3m4!1s0x478c6f6b7aeacf55:0x1e5013c7f1268dcb!8m2!3d46.2470941!4d6.2154113"
-                                target="_blank"><i class="fa fa-map-marker rad-txt-danger"></i> Genève</a></small>
+                                target="_blank"><i class="fa fa-map-marker rad-txt-danger"></i> Geneva</a></small>
                     </header>
                     <div class="row">
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-success">
                                 <img src="./assets/mind.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">DÉTECTION PRÉCOCE DU BURN-OUT</span>
+                                <span class="heading">BURN-OUT</span>
                                 <span class="value"><span>949</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-primary">
                                 <img src="./assets/fist.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">HARCÈLEMENT ET MOBBING</span>
+                                <span class="heading">STRESS</span>
                                 <span class="value"><span>678</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-danger">
                                 <img src="./assets/nature.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">NIVEAU DE STRESS</span>
+                                <span class="heading">Engagement</span>
                                 <span class="value"><span>755</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box">
                                 <img src="./assets/business-copie.png" alt="Image" style="width:55px; height:55px; position: absolute;">
-                                <span class="heading">INDICE DE PERFORMANCE</span>
+                                <span class="heading">Performance</span>
                                 <span class="value"><span>514</span></span>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                         <div class="col-xs-12">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Carte
+                                    <h3 class="panel-title">World Map
                                         <ul class="rad-panel-action">
                                             <li><i class="fa fa-chevron-down"></i></li>
                                             <li><i class="fa fa-rotate-right"></i></li>
@@ -267,7 +267,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Graphe
+                                    <h3 class="panel-title">Health risks VS. Engagement
                                         <ul class="rad-panel-action">
                                             <li><i class="fa fa-chevron-down"></i></li>
                                             <li><i class="fa fa-rotate-right"></i></li>
@@ -285,7 +285,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Graphe
+                                    <h3 class="panel-title">Participation VS. Burn-out risk
                                         <ul class="rad-panel-action">
                                             <li><i class="fa fa-chevron-down"></i></li>
                                             <li><i class="fa fa-rotate-right"></i></li>
@@ -304,7 +304,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-12">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Evenements
+                                    <h3 class="panel-title">Internal Events
                                         <ul class="rad-panel-action">
                                             <li><i class="fa fa-chevron-down"></i></li>
                                             <li><i class="fa fa-rotate-right"></i></li>
@@ -355,7 +355,7 @@
                         <div class="col-lg-3 col-md-8 col-xs-12">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Donut
+                                    <h3 class="panel-title">Pie Chart
                                         <ul class="rad-panel-action">
                                             <li><i class="fa fa-chevron-down"></i></li>
                                             <li><i class="fa fa-rotate-right"></i></li>
