--- a/dashboardcool/index.html
+++ b/dashboardcool/index.html
@@ -34,7 +34,7 @@
                                 </li>
                                 <li class="rad-notification-item">
                                     <a class="rad-notification-content lg-text" href="#"><i class="fa fa-power-off"></i>
-                                        Log off</a>
+                                        Se déconnecter</a>
                                 </li>
                             </ul>
                         </li>
