--- a/dashboardcool/index.html
+++ b/dashboardcool/index.html
@@ -218,28 +218,28 @@
                             <div class="rad-info-box rad-txt-success">
                                 <img src="./assets/mind.png" alt="Image" style="width:55px; height:55px; position: absolute;">
                                 <span class="heading">BURN-OUT</span>
-                                <span class="value"><span>949</span></span>
+                                <span class="value"><span>22</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-primary">
                                 <img src="./assets/fist.png" alt="Image" style="width:55px; height:55px; position: absolute;">
                                 <span class="heading">STRESS</span>
-                                <span class="value"><span>678</span></span>
+                                <span class="value"><span></span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box rad-txt-danger">
                                 <img src="./assets/nature.png" alt="Image" style="width:55px; height:55px; position: absolute;">
                                 <span class="heading">Engagement</span>
-                                <span class="value"><span>755</span></span>
+                                <span class="value"><span>387</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <div class="rad-info-box">
                                 <img src="./assets/business-copie.png" alt="Image" style="width:55px; height:55px; position: absolute;">
                                 <span class="heading">Performance</span>
-                                <span class="value"><span>514</span></span>
+                                <span class="value"><span>32</span></span>
                             </div>
                         </div>
                     </div>
