--- a/dashboardcool/index.html
+++ b/dashboardcool/index.html
@@ -225,7 +225,7 @@
                             <div class="rad-info-box rad-txt-primary">
                                 <img src="./assets/fist.png" alt="Image" style="width:55px; height:55px; position: absolute;">
                                 <span class="heading">STRESS</span>
-                                <span class="value"><span></span></span>
+                                <span class="value"><span>27</span></span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-xs-6">
