--- a/insightthirdsample/index.html
+++ b/insightthirdsample/index.html
@@ -64,7 +64,7 @@
             <section class="home section active" id="home">
                 <div class="container">
                     <div class="intro">
-                        <img src="images/fbf21544752279c20475454921bec0f8.jpg" alt="profile" class="shadow-dark">
+                        <!-- <img src="images/fbf21544752279c20475454921bec0f8.jpg" alt="profile" class="shadow-dark"> -->
                         <h1>Insight Solutions</h1>
                         <p>Human Capital Audit</p>
                         <div class="social-links">
@@ -99,7 +99,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="personal-info padd-15">
                                     <div class="row">
                                         <div class="info-item padd-15">
@@ -173,7 +173,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            -->
                             <div class="row">
                                 <div class="education padd-15">
                                     <h3 class="title">Nos Deux Thèmes</h3>
@@ -199,7 +199,8 @@
                                                     <h6 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> Performance
                                                     </h6>
-                                                    <h4 class="timeline-title">La performance globale de l’entreprise est intrinsèquement liée au bien-être des managers et collaborateurs</h4>
+                                                    <h4 class="timeline-title">La performance globale de l’entreprise est intrinsèquement liée au bien-être des managers et collaborateurs
+                                                    </h4>
                                                     <p class="timeline-text">
                                                         Si les managers n’assurent pas les conditions-cadres qui permettent l’engagement et la motivation des collaborateurs, c’est la performance de l’entreprise qui va être impactée, que cela soit au niveau de son chiffre d’affaire, de ses marges ou encore
                                                         de sa capacité à innover.</p>
@@ -234,7 +235,8 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Stress et Burn out</h4>
                                                     <p class="timeline-text">
-                                                        Détecter et anticiper les situations de sur-stress et de Burn-out</p>
+                                                        Détecter et anticiper les situations de sur-stress et de Burn-out
+                                                    </p>
                                                 </div>
                                                 <!-- timeline Item End -->
                                                 <!-- timeline Item -->
@@ -313,9 +315,9 @@
                         <!-- Service Item -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
-                                <div class="icon"><i class="fa fa-laptop"></i></div>
+                                <div class="icon"><img src="images/sadman.png" width="60" height="60"></div>
                                 <h4>Détection précoce du Burn-out</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lorem at erat sollicitudin bibendum nec sed dolor.
+                                <p>Eviter ou prévenir les situations de burn out dans son entreprise.
                                 </p>
 
                             </div>
@@ -324,45 +326,45 @@
                         <!-- Service Item -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
-                                <div class="icon"><i class="fa fa-photo"></i></div>
+                                <div class="icon"><img src="images/fistbump.png" width="60" height="60"></div>
                                 <h4>Harcèlement et mobbing</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lorem at erat sollicitudin bibendum nec sed dolor. </p>
+                                <p>Eviter les situations tendues au sein des équipes et maintenir un engagement élevé des collaborateurs. </p>
                             </div>
                         </div>
                         <!-- Service Item End -->
                         <!-- Service Item -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
-                                <div class="icon"><i class="fa fa-code"></i></div>
+                                <div class="icon"><img src="images/lvlstress.png" width="60" height="60"></div>
                                 <h4>Niveau de stress</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lorem at erat sollicitudin bibendum nec sed dolor.</p>
+                                <p>Comprendre et repérer les comportements de stress pathologique pour les éviter.</p>
                             </div>
                         </div>
                         <!-- Service Item End -->
                         <!-- Service Item -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
-                                <div class="icon"><i class="fa fa-film"></i></div>
+                                <div class="icon"><img src="images/hands.png" width="60" height="60"></div>
                                 <h4>Indice d’engagement des collaborateurs</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lorem at erat sollicitudin bibendum nec sed dolor. </p>
+                                <p>Comment rendre son organisation plus agile et plus réactive ?</p>
                             </div>
                         </div>
                         <!-- Service Item End -->
                         <!-- Service Item -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
-                                <div class="icon"><i class="fa fa-rocket"></i></div>
+                                <div class="icon"><img src="images/meca.png" width="60" height="60"></div>
                                 <h4>Indice d’agilité organisationnelle</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lorem at erat sollicitudin bibendum nec sed dolor. </p>
+                                <p>Comment former un manager au management 4.0 ? </p>
                             </div>
                         </div>
                         <!-- Service Item End -->
                         <!-- Service Item -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
-                                <div class="icon"><i class="fa fa-paint-brush"></i></div>
+                                <div class="icon"><img src="images/people.png" width="60" height="60"></div>
                                 <h4>Indice de management</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at lorem at erat sollicitudin bibendum nec sed dolor. </p>
+                                <p>Comment rendre ces collaborateurs plus engagés et plus productifs au sein de son entreprise ? </p>
                             </div>
                         </div>
                         <!-- Service Item End -->
@@ -385,18 +387,19 @@
                             <button type="button" data-filter="depression">Le Burn-out est il une dépression ?</button>
                             <button type="button" data-filter="symptome">Quels sont les symptômes du Burn-out ?</button>
                             <button type="button" data-filter="travail">Le retour au travail après un Burn-out est-il
-                        possible ?</button>
+                                possible ?</button>
                             <button type="button" data-filter="causes">Quelles-sont les causes du Burn-out ?</button>
 
                             <button type="button" data-filter="facteurs">Quels sont les facteurs de stress en entreprise
-                        ?</button>
+                                ?</button>
 
                             <button type="button" data-filter="monde">Le Burn-out peut-il toucher tout le monde
-                        ?</button>
+                                ?</button>
 
-                            <button type="button" data-filter="questionnaire">Pourquoi remplir le questionnaire et est-il
-                        anonyme
-                        ?</button>
+                            <button type="button" data-filter="questionnaire">Pourquoi remplir le questionnaire et
+                                est-il
+                                anonyme
+                                ?</button>
                         </div>
                     </div>
                     <div class="row">
@@ -406,6 +409,11 @@
                                 <div class="portfolio-img">
                                     <img src="images/burnout.jpg" alt="portfolio">
                                 </div>
+                                <div class="faq-answer">Même s’il y a beaucoup de similitudes au niveau des symptômes, le Burn-out n’est pas une dépression mais il peut y amener sa victime. L’origine d’une dépression n’est pas la même que celle du Burn-out, tout comme son effet
+                                    ; la dépression tient son origine de la personne en elle-même, de ses sentiments, ses états d’esprit. C’est un déséquilibre psychologique qui a des répercutions physiologiques. Une dépression va toucher une personne
+                                    dans toutes ses activités, que cela soit dans un cadre professionnel ou privé, la personne sera déprimée alors qu’une victime du Burn-out sera surtout en difficulté dans un cadre professionnel mais va conserver le goût
+                                    pour ce qu’elle aime faire, même si elle ne prend plus le temps de le faire. Le Burn-out est surtout dû au sur-stress (ou stress chronique) généré dans un cadre professionnel. De plus il n’est pas considéré comme une
+                                    maladie mentale au même titre que la dépression.</div>
                                 <div class="portfolio-info">
                                     <h4>Le Burn-out est il une dépression ?</h4>
                                     <div class="icon">
@@ -527,7 +535,7 @@
                                 <div class="blog-img">
                                     <img src="images/VueAerienne©GeneveTourisme_Zellweger-1-624x415.jpg" alt="blog">
                                     <div class="blog-date">
-                                        En savoir plus
+                                        <a href="#"> En savoir plus</a>
                                     </div>
                                 </div>
                                 <div class="blog-info">
@@ -545,7 +553,7 @@
                                 <div class="blog-img">
                                     <img src="images/maxresdefault.jpg" alt="blog">
                                     <div class="blog-date">
-                                        En savoir plus
+                                        <a href="#"> En savoir plus</a>
                                     </div>
                                 </div>
                                 <div class="blog-info">
@@ -567,7 +575,7 @@
                                 <div class="blog-img">
                                     <img src="images/ge_history_666_296.jpg" alt="blog">
                                     <div class="blog-date">
-                                        En savoir plus
+                                        <a href="#"> En savoir plus</a>
                                     </div>
                                 </div>
                                 <div class="blog-info">
@@ -706,13 +714,13 @@
         </ul>
         <h5>Body Skin</h5>
         <label>
-         <input type="radio" class="body-skin" name="body-style" value="light" checked="true">
-         Light
-      </label>
+            <input type="radio" class="body-skin" name="body-style" value="light" checked="true">
+            Light
+        </label>
         <label>
-         <input type="radio" class="body-skin" name="body-style" value="dark">
-         Dark
-      </label>
+            <input type="radio" class="body-skin" name="body-style" value="dark">
+            Dark
+        </label>
     </div>
     <!-- Live Style Switcher - Demo Only End -->
 
