--- a/insightsolutionsfinalsite/index.html
+++ b/insightsolutionsfinalsite/index.html
@@ -100,7 +100,8 @@
                                     <h1>Insight Solutions. <span></span></h1>
                                     <h1> <em> <u> La version moderne de l'audit du capital humain </u> </em>
                                         <span></span></h1>
-                                    <a href="#" type="button" class="cta">Nos Solutions</a>
+                                    <a href="#" type="button" id="servicesbtnthree" onclick="document.getElementById('servicesbtn').click()" class="cta">Nos
+                                        Solutions</a>
                                 </div>
                             </div>
                         </section>
